Ajout classe, controller et repo pour destination commentaire dans creerHotel

--- a/src/main/resources/templates/CreerHotel.html
+++ b/src/main/resources/templates/CreerHotel.html
@@ -38,6 +38,8 @@ crossorigin="anonymous">
 	                    </div>
 	                  </div>
 	                  
+	                  <!-- Il faudrait ajouter une liste de destination pour lier hotel a destination -->
+	                  
 	                  
 	                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
 	                    <button type="submit" class="btn btn-primary btn-lg">Enregistrer</button>
