Html + test reservation

--- a/src/main/resources/templates/modifierReservation.html
+++ b/src/main/resources/templates/modifierReservation.html
@@ -2,7 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Modifier une Destination</title>
+<title>Modifier une réservation</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
 crossorigin="anonymous">
@@ -18,23 +18,23 @@ crossorigin="anonymous">
 	            <div class="row justify-content-center">
 	              <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 	
-	                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Modifier une Destination</p>
+	                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Modifier une réservation</p>
 	
-	                <form class="mx-1 mx-md-4" method="post" modelAttribute="destination">
+	                <form class="mx-1 mx-md-4" method="post" modelAttribute="reservation">
 	
 	                  <div class="d-flex flex-row align-items-center mb-4">
 	                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
 	                    <div class="form-outline flex-fill mb-0">
-	                    	<label class="form-label" for="longitude">Longitude</label>
-	                    	<input type="text" name="longitude" class="form-control" th:value="${destination.longitude}"/>
+	                    	<label class="form-label" for="date">Date</label>
+	                    	<input type="date" name="date" class="form-control" th:value="${reservation.date}"/>
 	                    </div>
 	                  </div>
 	                  
 	                  <div class="d-flex flex-row align-items-center mb-4">
 	                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
 	                    <div class="form-outline flex-fill mb-0">
-	                    	<label class="form-label" for="latitude">Latitude</label>
-	                    	<input type="text" name="latitude" class="form-control" th:value="${destination.latitude}"/>
+	                    	<label class="form-label" for="nbJours">Nombre de jours</label>
+	                    	<input type="text" name="nbJours" class="form-control" th:value="${reservation.nbJours}"/>
 	                    </div>
 	                  </div>
 	                  
@@ -59,4 +59,4 @@ crossorigin="anonymous">
 	  </div>
 	</section>
 </body>
-</html>
+</html>ml>
